Visible round timers + fixes
The timer before a round starts is now visible. Some syntax fixes.

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -62,9 +62,9 @@ main{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    position: absolute;
-    top: 370px;
-    left: 690px;
+    position: relative;
+    top: -250px;
+    left: 625px;
 }
 
 .startButtonPressed{
